force-app/main/default/objects/Health_professional_reference_word_count__c/Health_professional_reference_word_count__c.object-meta.xml
<CustomObject>
    <label>Health professional reference word count</label>
    <nameField>
        <label>Health professional reference word count Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Health professional reference word cts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>