force-app/main/default/objects/Health_professional_reference_word_count__c/fields/count__c.field-meta.xml
<CustomField>
    <fullName>count__c</fullName>
    <label>count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>