force-app/main/default/objects/Health_professional_reference_word_count__c/fields/Health_professional_reference__c.field-meta.xml
<CustomField>
    <fullName>Health_professional_reference__c</fullName>
    <label>Health professional reference</label>
    <referenceTo>Health_professional_reference__c</referenceTo>
    <relationshipLabel>Health professional reference word cts</relationshipLabel>
    <relationshipName>Health_professional_reference_word_cts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>